--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="whiteopacity">#80FFFFFF</color>
+    <color name="title">#ECECEC</color>
     <color name="background_container">#191926</color>
+    <color name="red_tit">#FF3466</color>
 </resources>
