--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<ScrollView android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_container"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MovieDetailsActivity">
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingBottom="109dp"
+    >
 
     <ImageView
         android:id="@+id/imagebackground"
@@ -17,6 +22,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/imagegradient"
+        android:layout_width="0dp"
+        android:layout_height="298dp"
+        android:background="@drawable/background_original"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidestart"
         android:layout_width="wrap_content"
@@ -30,43 +44,44 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_end="@dimen/space_4x" />
-<LinearLayout
-    android:id="@+id/linearback"
-    android:layout_width="42dp"
-    android:layout_height="16dp"
-    app:layout_constraintStart_toStartOf="@id/guidestart"
-    android:layout_marginTop="56dp"
-    android:orientation="horizontal"
-    app:layout_constraintTop_toTopOf="parent"
-    >
-    <ImageView
-        android:id="@+id/backsvg"
-        android:layout_width="6dp"
-        android:layout_height="10dp"
-        android:scaleType="centerCrop"
-        android:layout_gravity="center"
-        android:background="@drawable/ic_path"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-    <TextView
-        android:id="@+id/back"
-        android:layout_width="28dp"
+
+    <LinearLayout
+        android:id="@+id/linearback"
+        android:layout_width="42dp"
         android:layout_height="16dp"
-        android:layout_marginStart="8dp"
-        android:gravity="center"
-        android:text="@string/back"
-        android:textColor="@color/whiteopacity"
-        android:textSize="12sp"
-        />
-</LinearLayout>
+        android:layout_marginTop="56dp"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="@id/guidestart"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/backsvg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/ic_path"
+            android:scaleType="centerCrop"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:gravity="center"
+            android:text="@string/back"
+            android:textColor="@color/whiteopacity"
+            android:textSize="12sp" />
+    </LinearLayout>
+
     <TextView
         android:id="@+id/thirteen"
         android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:paddingTop="@dimen/space_1x"
-        android:paddingBottom="@dimen/space_1x"
+        android:layout_height="wrap_content"
         android:layout_marginTop="154dp"
         android:gravity="center"
+        android:paddingTop="@dimen/space_1x"
+        android:paddingBottom="@dimen/space_1x"
         android:text="@string/number"
         android:textColor="@color/white"
         android:textSize="12sp"
@@ -79,9 +94,9 @@
     <TextView
         android:id="@+id/texttitle"
         android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
         android:gravity="start"
-
         android:text="@string/title_averages"
         android:textColor="@color/title"
         android:textSize="40sp"
@@ -94,14 +109,225 @@
     <TextView
         android:id="@+id/redtitle"
         android:layout_width="0dp"
-        android:layout_height="20dp"
+        android:layout_height="wrap_content"
         android:gravity="start"
         android:text="@string/title_red"
         android:textColor="@color/red_tit"
         android:textSize="14sp"
+
         app:layout_constraintEnd_toEndOf="@id/guideend"
         app:layout_constraintStart_toStartOf="@id/guidestart"
-        app:layout_constraintTop_toBottomOf="@+id/texttitle"
+        app:layout_constraintTop_toBottomOf="@+id/texttitle" />
 
-        />
+    <LinearLayout
+        android:id="@+id/linrating"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/space_2x"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="@id/guidestart"
+        app:layout_constraintTop_toBottomOf="@+id/redtitle">
+
+        <ImageView
+            android:id="@+id/ratingbar1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginEnd="3.25dp"
+            app:srcCompat="@drawable/custom_ratingbar" />
+
+        <ImageView
+            android:id="@+id/ratingbar2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginEnd="3.25dp"
+            app:layout_constraintStart_toEndOf="@id/ratingbar1"
+            app:layout_constraintTop_toBottomOf="@+id/redtitle"
+            app:srcCompat="@drawable/custom_ratingbar" />
+
+        <ImageView
+            android:id="@+id/ratingbar3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginEnd="3.25dp"
+            app:layout_constraintStart_toEndOf="@id/ratingbar2"
+            app:layout_constraintTop_toBottomOf="@+id/redtitle"
+            app:srcCompat="@drawable/custom_ratingbar" />
+
+        <ImageView
+            android:id="@+id/ratingbar4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginEnd="3.25dp"
+
+            app:srcCompat="@drawable/custom_ratingbar" />
+
+        <ImageView
+            android:id="@+id/ratingbar5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/custom_ratingbar" />
+
+        <TextView
+            android:id="@+id/rewiews"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="8.89dp"
+            android:text="@string/rewiews_text"
+            android:textAllCaps="true"
+            android:textColor="#ECECEC"
+            android:textSize="14sp"
+
+            />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/storytitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:gravity="start"
+        android:text="@string/story"
+        android:textColor="#ECECEC"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="@id/guideend"
+        app:layout_constraintStart_toStartOf="@id/guidestart"
+        app:layout_constraintTop_toBottomOf="@+id/linrating" />
+
+    <TextView
+        android:id="@+id/descrstory"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/space_1x"
+        android:gravity="start"
+        android:text="@string/storydesc"
+        android:textColor="@color/whiteopacity75"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="@id/guideend"
+        app:layout_constraintStart_toStartOf="@id/guidestart"
+        app:layout_constraintTop_toBottomOf="@+id/storytitle" />
+
+    <TextView
+        android:id="@+id/casttitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="116dp"
+        android:gravity="start"
+        android:text="@string/cast"
+        android:textColor="#ECECEC"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="@id/guideend"
+        app:layout_constraintStart_toStartOf="@id/guidestart"
+        app:layout_constraintTop_toBottomOf="@+id/descrstory" />
+
+    <ImageView
+        android:id="@+id/roberto"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="7dp"
+        android:background="@drawable/movie"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toStartOf="@+id/evans"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/casttitle" />
+
+    <TextView
+        android:id="@+id/robertotext"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="7dp"
+        android:gravity="start"
+        android:text="@string/robertot"
+        android:textColor="#D8D8D8"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="@id/roberto"
+        app:layout_constraintStart_toStartOf="@id/roberto"
+        app:layout_constraintTop_toBottomOf="@+id/roberto" />
+
+    <ImageView
+        android:id="@+id/evans"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:background="@drawable/movtwo"
+        android:scaleType="centerCrop"
+        android:layout_marginTop="7dp"
+        app:layout_constraintEnd_toStartOf="@+id/mark"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/roberto"
+        app:layout_constraintTop_toBottomOf="@+id/casttitle" />
+
+    <TextView
+        android:id="@+id/evanstext"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="7dp"
+        android:gravity="start"
+        android:text="@string/evanst"
+        android:textColor="#D8D8D8"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="@id/evans"
+        app:layout_constraintStart_toStartOf="@id/evans"
+        app:layout_constraintTop_toBottomOf="@+id/roberto" />
+
+    <ImageView
+        android:id="@+id/mark"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="7dp"
+        android:background="@drawable/movthree"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toStartOf="@+id/chris"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/evans"
+        app:layout_constraintTop_toBottomOf="@+id/casttitle" />
+
+    <TextView
+        android:id="@+id/marktext"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="7dp"
+        android:gravity="start"
+        android:text="@string/markt"
+        android:textColor="#D8D8D8"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="@id/mark"
+        app:layout_constraintStart_toStartOf="@id/mark"
+        app:layout_constraintTop_toBottomOf="@+id/evans" />
+
+    <ImageView
+        android:id="@+id/chris"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="7dp"
+        android:background="@drawable/movfour"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/mark"
+        app:layout_constraintTop_toBottomOf="@+id/casttitle" />
+
+    <TextView
+        android:id="@+id/christext"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="7dp"
+        android:gravity="start"
+        android:text="@string/christ"
+        android:textColor="#D8D8D8"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="@id/chris"
+        app:layout_constraintStart_toStartOf="@id/chris"
+        app:layout_constraintTop_toBottomOf="@+id/mark" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
