--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -16,7 +16,7 @@
         android:id="@+id/imagebackground"
         android:layout_width="0dp"
         android:layout_height="298dp"
-        android:background="@drawable/background_original"
+        android:src="@drawable/background_original"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +26,7 @@
         android:id="@+id/imagegradient"
         android:layout_width="0dp"
         android:layout_height="298dp"
-        android:background="@drawable/background_original"
+        android:src="@drawable/gradient"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@drawable/ic_path"
+            android:src="@drawable/ic_path"
             android:scaleType="centerCrop"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -231,7 +231,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginTop="7dp"
-        android:background="@drawable/movie"
+        android:src="@drawable/movie"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toStartOf="@+id/evans"
         app:layout_constraintHorizontal_bias="0.5"
@@ -256,7 +256,7 @@
         android:id="@+id/evans"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:background="@drawable/movtwo"
+        android:src="@drawable/movtwo"
         android:scaleType="centerCrop"
         android:layout_marginTop="7dp"
         app:layout_constraintEnd_toStartOf="@+id/mark"
@@ -283,7 +283,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginTop="7dp"
-        android:background="@drawable/movthree"
+        android:src="@drawable/movthree"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toStartOf="@+id/chris"
         app:layout_constraintHorizontal_bias="0.5"
@@ -309,7 +309,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginTop="7dp"
-        android:background="@drawable/movfour"
+        android:src="@drawable/movfour"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
