fixed names and font

--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -99,7 +99,6 @@
             android:text="@string/title_red"
             android:textColor="@color/red_tit"
             android:textSize="14sp"
-
             app:layout_constraintEnd_toEndOf="@id/guide_end"
             app:layout_constraintStart_toStartOf="@id/guide_start"
             app:layout_constraintTop_toBottomOf="@+id/text_title" />
@@ -179,7 +178,8 @@
             android:layout_marginTop="28dp"
             android:gravity="start"
             android:text="@string/story"
-            android:textColor="#ECECEC"
+            android:textColor="@color/title"
+            android:fontFamily="sans-serif-medium"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="@id/guide_end"
             app:layout_constraintStart_toStartOf="@id/guide_start"
@@ -205,7 +205,8 @@
             android:layout_marginTop="24dp"
             android:gravity="start"
             android:text="@string/cast"
-            android:textColor="#ECECEC"
+            android:textColor="@color/title"
+            android:fontFamily="sans-serif-medium"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="@id/guide_start"
             app:layout_constraintTop_toBottomOf="@+id/descr_story" />
@@ -227,11 +228,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="7dp"
             android:gravity="start"
             android:text="@string/roberto_text"
-            android:textColor="#D8D8D8"
-            android:textSize="12sp"
+            android:textColor="@color/names_actors"
+            android:textSize="@dimen/text_actors"
+            android:fontFamily="sans-serif-medium"
             app:layout_constraintEnd_toEndOf="@id/roberto"
             app:layout_constraintStart_toStartOf="@id/roberto"
             app:layout_constraintTop_toBottomOf="@+id/roberto" />
@@ -253,11 +254,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="7dp"
             android:gravity="start"
             android:text="@string/evans_text"
-            android:textColor="#D8D8D8"
-            android:textSize="12sp"
+            android:textColor="@color/names_actors"
+            android:fontFamily="sans-serif-medium"
+            android:textSize="@dimen/text_actors"
             app:layout_constraintEnd_toEndOf="@id/evans"
             app:layout_constraintStart_toStartOf="@id/evans"
             app:layout_constraintTop_toBottomOf="@+id/roberto" />
@@ -279,11 +280,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="7dp"
             android:gravity="start"
             android:text="@string/mark_text"
-            android:textColor="#D8D8D8"
-            android:textSize="12sp"
+            android:textColor="@color/names_actors"
+            android:fontFamily="sans-serif-medium"
+            android:textSize="@dimen/text_actors"
             app:layout_constraintEnd_toEndOf="@id/mark"
             app:layout_constraintStart_toStartOf="@id/mark"
             app:layout_constraintTop_toBottomOf="@+id/evans" />
@@ -295,7 +296,7 @@
             android:layout_marginTop="7dp"
             android:scaleType="centerCrop"
             android:src="@drawable/movfour"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/guide_end"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/mark"
             app:layout_constraintTop_toBottomOf="@+id/cast_title" />
@@ -305,11 +306,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="7dp"
             android:gravity="start"
             android:text="@string/chris_text"
-            android:textColor="#D8D8D8"
-            android:textSize="12sp"
+            android:textColor="@color/names_actors"
+            android:fontFamily="sans-serif-medium"
+            android:textSize="@dimen/text_actors"
             app:layout_constraintEnd_toEndOf="@id/chris"
             app:layout_constraintStart_toStartOf="@id/chris"
             app:layout_constraintTop_toBottomOf="@+id/mark" />
