--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="whiteopacity">#80FFFFFF</color>
     <color name="whiteopacity75">#BFFFFFFF</color>
+    <color name="names_actors">#D8D8D8</color>
     <color name="rewiews">#6D6D80</color>
     <color name="title">#ECECEC</color>
     <color name="background_container">#191926</color>
