all new  fragment_movie_list.xml

--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -67,7 +67,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="154dp"
-            android:fontFamily="sans-serif-medium"
+            android:fontFamily="sans-serif-black"
             android:gravity="center"
             android:paddingTop="@dimen/space_1x"
             android:paddingBottom="@dimen/space_1x"
@@ -85,6 +85,7 @@
             android:text="@string/title_averages"
             android:textColor="@color/title"
             android:textSize="40sp"
+            android:fontFamily="sans-serif-black"
             app:layout_constraintEnd_toEndOf="@id/guide_end"
             app:layout_constraintStart_toStartOf="@id/guide_start"
             app:layout_constraintTop_toBottomOf="@+id/thirteen"
@@ -99,6 +100,7 @@
             android:text="@string/title_red"
             android:textColor="@color/red_tit"
             android:textSize="14sp"
+            android:fontFamily="sans-serif-light"
             app:layout_constraintEnd_toEndOf="@id/guide_end"
             app:layout_constraintStart_toStartOf="@id/guide_start"
             app:layout_constraintTop_toBottomOf="@+id/text_title" />
@@ -165,7 +167,7 @@
                 android:text="@string/rewiews_text"
                 android:textAllCaps="true"
                 android:textColor="@color/rewiews"
-                android:fontFamily="sans-serif-medium"
+                android:fontFamily="sans-serif-black"
                 android:textSize="14sp"
 
                 />
@@ -179,7 +181,7 @@
             android:gravity="start"
             android:text="@string/story"
             android:textColor="@color/title"
-            android:fontFamily="sans-serif-medium"
+            android:fontFamily="sans-serif-black"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="@id/guide_end"
             app:layout_constraintStart_toStartOf="@id/guide_start"
@@ -194,6 +196,7 @@
             android:text="@string/story_desc"
             android:textColor="@color/whiteopacity75"
             android:textSize="14sp"
+            android:fontFamily="sans-serif-light"
             app:layout_constraintEnd_toEndOf="@id/guide_end"
             app:layout_constraintStart_toStartOf="@id/guide_start"
             app:layout_constraintTop_toBottomOf="@+id/story_title" />
@@ -206,7 +209,7 @@
             android:gravity="start"
             android:text="@string/cast"
             android:textColor="@color/title"
-            android:fontFamily="sans-serif-medium"
+            android:fontFamily="sans-serif-black"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="@id/guide_start"
             app:layout_constraintTop_toBottomOf="@+id/descr_story" />
@@ -232,7 +235,7 @@
             android:text="@string/roberto_text"
             android:textColor="@color/names_actors"
             android:textSize="@dimen/text_actors"
-            android:fontFamily="sans-serif-medium"
+            android:fontFamily="sans-serif-black"
             app:layout_constraintEnd_toEndOf="@id/roberto"
             app:layout_constraintStart_toStartOf="@id/roberto"
             app:layout_constraintTop_toBottomOf="@+id/roberto" />
@@ -257,7 +260,7 @@
             android:gravity="start"
             android:text="@string/evans_text"
             android:textColor="@color/names_actors"
-            android:fontFamily="sans-serif-medium"
+            android:fontFamily="sans-serif-black"
             android:textSize="@dimen/text_actors"
             app:layout_constraintEnd_toEndOf="@id/evans"
             app:layout_constraintStart_toStartOf="@id/evans"
@@ -283,7 +286,7 @@
             android:gravity="start"
             android:text="@string/mark_text"
             android:textColor="@color/names_actors"
-            android:fontFamily="sans-serif-medium"
+            android:fontFamily="sans-serif-black"
             android:textSize="@dimen/text_actors"
             app:layout_constraintEnd_toEndOf="@id/mark"
             app:layout_constraintStart_toStartOf="@id/mark"
@@ -309,7 +312,7 @@
             android:gravity="start"
             android:text="@string/chris_text"
             android:textColor="@color/names_actors"
-            android:fontFamily="sans-serif-medium"
+            android:fontFamily="sans-serif-black"
             android:textSize="@dimen/text_actors"
             app:layout_constraintEnd_toEndOf="@id/chris"
             app:layout_constraintStart_toStartOf="@id/chris"
