--- a/app/src/main/res/layout/fragment_movie_list.xml
+++ b/app/src/main/res/layout/fragment_movie_list.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:background="@color/background_container"
     android:clipToPadding="false"
     android:paddingBottom="64dp">
@@ -17,29 +16,203 @@
             android:id="@+id/movie_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/movie_list"
-            android:textSize="@dimen/movie_title"
-            android:textColor="@color/white"
-            android:fontFamily="sans-serif-medium"
             android:layout_marginTop="44dp"
-            android:padding="16dp"
             android:drawablePadding="8dp"
+            android:fontFamily="sans-serif-black"
+            android:padding="16dp"
+            android:text="@string/movie_list"
+            android:textColor="@color/white"
+            android:textSize="@dimen/movie_title"
+            app:drawableStartCompat="@drawable/ic_movie_list"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:drawableStartCompat="@drawable/ic_movie_list" />
-<androidx.cardview.widget.CardView
-    android:id="@+id/card_movie"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    app:cardCornerRadius="8px"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/movie_list"
-    >
-<ImageView
-    android:layout_width="wrap_content"
-    android:layout_height="248dp"
-    />
-</androidx.cardview.widget.CardView>
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_movie"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="14dp"
+            android:layout_marginTop="18dp"
+            app:cardBackgroundColor="@color/background_container"
+            app:cardCornerRadius="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/movie_list"
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintWidth_percent="0.5"
+
+            >
+
+
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/card_border"
+                android:padding="1dp">
+
+                <ImageView
+                    android:id="@+id/movie_prewiew"
+                    android:layout_width="wrap_content"
+                    android:layout_height="248dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/list_movie"
+                    app:layout_constraintBottom_toTopOf="@+id/text_title"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="240dp"
+                    android:src="@drawable/gradient"
+                    app:layout_constraintBottom_toTopOf="@+id/text_title"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="6dp"
+                    android:layout_marginTop="8dp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
+                    app:cardBackgroundColor="@color/background_container"
+                    app:cardCornerRadius="5dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="4dp"
+                        android:fontFamily="sans-serif-black"
+                        android:text="@string/number"
+                        android:textColor="@color/white"
+                        android:textSize="12sp" />
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/guideline_start"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_begin="6dp" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="13dp"
+                    android:layout_marginEnd="6dp"
+                    android:src="@drawable/ic_like_movie"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    />
+                <TextView
+                    android:id="@+id/red_title"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="start"
+                    android:text="@string/title_red"
+                    android:textColor="@color/red_tit"
+                    android:textSize="8sp"
+                    android:fontFamily="sans-serif-light"
+                    app:layout_constraintBottom_toTopOf="@id/lin_rating"
+                    app:layout_constraintStart_toStartOf="@+id/guideline_start"
+                    tools:ignore="SmallSp" />
+
+                <LinearLayout
+                    android:id="@+id/lin_rating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toTopOf="@id/text_title"
+                    app:layout_constraintStart_toStartOf="@+id/guideline_start">
+
+                    <ImageView
+                        android:id="@+id/rating_bar_1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginEnd="3.25dp"
+                        app:srcCompat="@drawable/custom_rating_bar" />
+
+                    <ImageView
+                        android:id="@+id/rating_bar_2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginEnd="3.25dp"
+                        app:layout_constraintStart_toEndOf="@id/rating_bar_1"
+                        app:layout_constraintTop_toBottomOf="@+id/red_title"
+                        app:srcCompat="@drawable/custom_rating_bar" />
+
+                    <ImageView
+                        android:id="@+id/rating_bar_3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginEnd="3.25dp"
+                        app:layout_constraintStart_toEndOf="@id/rating_bar_2"
+                        app:layout_constraintTop_toBottomOf="@+id/red_title"
+                        app:srcCompat="@drawable/custom_rating_bar" />
+
+                    <ImageView
+                        android:id="@+id/rating_bar_4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginEnd="3.25dp"
+
+                        app:srcCompat="@drawable/custom_rating_bar" />
+
+                    <ImageView
+                        android:id="@+id/rating_bar_5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        app:srcCompat="@drawable/custom_rating_bar" />
+
+                    <TextView
+                        android:id="@+id/rewiews"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="8.89dp"
+                        android:fontFamily="sans-serif-black"
+                        android:text="@string/rewiews_text"
+                        android:textAllCaps="true"
+                        android:textColor="@color/rewiews"
+                        android:textSize="8sp"
+
+                        />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/text_title"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-black"
+                    android:gravity="start"
+                    android:text="@string/title_averages"
+                    android:textColor="@color/title"
+                    android:textSize="14sp"
+                    app:layout_constraintBottom_toTopOf="@+id/run_time"
+                    app:layout_constraintStart_toStartOf="@+id/guideline_start" />
+
+                <TextView
+                    android:id="@+id/run_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/run_minutes"
+                    android:fontFamily="sans-serif-black"
+                    android:textAllCaps="true"
+                    android:textColor="@color/run_color_min"
+                    android:textSize="8sp"
+                    android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/guideline_start" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
